change background color

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <div class="center-text">
         <p><strong>Directions:</strong> Look at each term and try and recall the definition on your own. When you think you have recalled it correctly, click on the term and reveal the definition and examples. Click again to hide the definitions (note: not <em>all</em> terms have examples.)</p>
       </div>
+
+      <div class="align-justify">
         <p><span class="click-js">Javascript</span></p>
       </div>
       <div id="java-showing">
@@ -86,7 +88,7 @@
 Concatenation: Combining two Strings together into one String. -->
 
 
-
+      </div>  
       </div>
   </body>
 </html>
